--- a/gradle.properties
+++ b/gradle.properties
@@ -2,3 +2,10 @@ org.gradle.caching=true
 org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.daemon=true
+
+kotlin_version=1.3.31
+zircon_version=2019.0.19-PREVIEW
+junit_version=4.12
+mockito_version=1.10.19
+assertj_version=3.6.2
+slf4j_version=1.7.25
