--- a/gradle.properties
+++ b/gradle.properties
@@ -4,7 +4,7 @@ org.gradle.jvmargs=-Xmx2048M
 org.gradle.daemon=true
 
 kotlin_version=1.3.61
-zircon_version=2020.0.2-PREVIEW
+zircon_version=2020.1.0-RELEASE
 junit_version=4.12
 mockito_version=1.10.19
 assertj_version=3.6.2
