--- a/gradle.properties
+++ b/gradle.properties
@@ -3,9 +3,11 @@ org.gradle.parallel=true
 org.gradle.jvmargs=-Xmx2048M
 org.gradle.daemon=true
 
-kotlin_version=1.3.61
 zircon_version=2020.1.0-RELEASE
 junit_version=4.12
 mockito_version=1.10.19
 assertj_version=3.6.2
 slf4j_version=1.7.25
+
+group=com.example.zircon.skeleton
+version=1.1.0
